--- a/index.html
+++ b/index.html
@@ -59,17 +59,21 @@
   
 <h2>Biography</h2>
 <p style="text-align:justify;">
-I am currently pursuing the Phd degree at
+I am currently a postdoctoral researcher in 
+  <tr>
+    <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science, Chinese Academy of Sciences (AMSS) </a></td>.
+  <tr>
+  I attained the Phd degree at the
   <tr>
     <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science, Chinese Academy of Sciences (AMSS) </a></td>
   <tr>
   and 
   <tr>
-    <td> <a href="https://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences (UCAS)</a></td>.
+    <td> <a href="https://english.ucas.ac.cn/" target="_blank">University of Chinese Academy of Sciences (UCAS)</a></td>,
   <tr>
-  My supervisor is Prof. 
+  under the supervision of  
   <tr>
-    <td> <a href="http://mmrc.iss.ac.cn/~xhjia/" target="_blank">Xiaohong Jia</a></td>.
+    <td> <a href="http://mmrc.iss.ac.cn/~xhjia/" target="_blank">Prof. Xiaohong Jia</a></td>.
    <tr>
   Before that, I received my Bachelor's degree of 
   <tr>
@@ -82,7 +86,7 @@ I am currently pursuing the Phd degree at
   in 2019.
 </p>
 <p> 
-My research interest includes computer aided geometric design and computer graphics.
+My research interest includes computer aided geometric design, computer aided design and computer graphics.
 </p>
 
 <h2>Publications</h2>
