--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 <p style="text-align:justify;">
 I am currently a postdoctoral researcher in 
   <tr>
-    <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science, Chinese Academy of Sciences (AMSS) </a></td>.
+    <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science (AMSS), Chinese Academy of Sciences </a></td>.
   <tr>
   I attained the Phd degree at the
   <tr>
-    <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science, Chinese Academy of Sciences (AMSS) </a></td>
+    <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science (AMSS), Chinese Academy of Sciences (CAS) </a></td>
   <tr>
   and 
   <tr>
