--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <p style="text-align:justify;">
 I am currently a postdoctoral researcher in 
   <tr>
-    <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science (AMSS), Chinese Academy of Sciences </a></td>.
+    <td> <a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science (AMSS), Chinese Academy of Sciences (CAS) </a></td>.
   <tr>
   I attained the Phd degree at the
   <tr>
@@ -134,44 +134,8 @@ My research interest includes computer aided geometric design, computer aided de
     </tbody>
   </table>  
 
+   
   
-    
-  
-<!--
-  <h2>Publications</h2>
-    <!--这里写点发表的论文（if any） 格式如下>
-    <table border="0" width="100%">
-  <!--   <tbody> 
-      <tr>
-        <td>
-          <div align="center">
-            <img width="180" src="./LARNet(ICML2021)/Fig0_headpic.png" alt="">
-          </div>
-        </td>
-        <td>
-          <a href=" https://arxiv.org/abs/2103.08147" target="_blank">LARNet: Lie Algebra Residual Network for Face Recognition</a>        
-          <br>
-          <strong>Xiaolong Yang</strong>, 
-          Xiaohong Jia, 
-          Dihong Gong,
-          Dong-Ming Yan,
-          Zhifeng Li,
-          Wei Liu
-          <br> 
-          <i>In Proceedings of the 38th International Conference on Machine Learning (ICML2021)</i>
-          <br>
-          [<a href="LARNet.html" target="_blank">Project Page</a>]
-          [<a href="./LARNet(ICML2021)/xiaolonyang_ICML2021_Main.pdf" target="_blank">PDF</a>]
-          [<a href="https://github.com/paradocx/LARNet/" target="_blank">Code</a>]
-          [<a href="./LARNet(ICML2021)/xiaolonyang_ICML21_Sup.pdf" target="_blank">Supplement</a>] 
-          [<a href="./LARNet(ICML2021)/ICML21_LARNet.pptx" target="_blank">Slides</a>]
-        </td>
-      </tr>
-
-
-
-    </tbody> -->
-  </table>  
 <!--
   <h2>Research Experiences</h2>
   这里可以写点别的 不要就注释掉
