--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ My research interest includes computer aided geometric design, computer aided de
           </div>
         </td>
         <td>
-          <a href=" https://authors.elsevier.com/c/1hyKgcAOr6xCP" target="_blank">Efficient Computation of Moving Planes for Rational Parametric Surfaces with Base Points using Dixon Resultants</a>        
+          <a href=" https://authors.elsevier.com/c/1hyKgcAOr6xCP" target="_blank">Efficient Computation of Moving Planes for Rational Parametric Surfaces with Base Points Using Dixon Resultants</a>        
           <br>
           <strong>Kai Li</strong>,
           Xiaohong Jia
