--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@ My research interest includes computer aided geometric design, computer aided de
       <tr>
         <td>
           <div align="center">
-            <img width="180" src="./Homepage_files/fig/TOG2025.png" alt="">
+            <img width="180" src="./Homepage_files/fig/CAGD2023.png" alt="">
           </div>
         </td>
         <td>
-          <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>        
+          <a href=" https://authors.elsevier.com/c/1hyKgcAOr6xCP" target="_blank">Efficient Computation of Moving Planes for Rational Parametric Surfaces with Base Points Using Dixon Resultants</a>        
           <br>
           <strong>Kai Li</strong>,
           Xiaohong Jia
           and Falai Chen
           <br> 
-          <i>ACM Transactions on Graphics, Vol. 44, 2025.</i>
+          <i>Computer Aided Geometric Design, Vol. 107, 2023.</i>
           <br>
         </td>
       </tr>
