--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ My research interest includes computer aided geometric design, computer aided de
     <tbody> 
       <tr>
         <td>
-          <div align="center">
+          <!-- <div align="center"> -->
             <img width="180" src="./Homepage_files/fig/TOG2025.png" alt="">
           </div>
         </td>
