--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ My research interest includes computer aided geometric design, computer aided de
         <td>
           <!-- <div align="center"> -->
             <img width="180" src="./Homepage_files/fig/TOG2025.png" alt="">
-          </div>
+          <!-- </div> -->
         </td>
         <td>
           <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>        
