--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ My research interest includes computer aided geometric design, computer aided de
           <!-- </div> -->
         </td>
         <td>
-          <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>        
+          <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>        
           <br>
           <strong>Kai Li</strong>,
           Xiaohong Jia
