--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@ My research interest includes computer aided geometric design, computer aided de
             <img width="180" src="./Homepage_files/fig/TOG2025.png" alt="">
           <!-- </div> -->
         </td>
-        <td align="left">
-          <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>        
+        <td>
+          <div align="left">
+            <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>  
+          </div>
           <br>
           <strong>Kai Li</strong>,
           Xiaohong Jia
