--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ My research interest includes computer aided geometric design, computer aided de
           Xiaohong Jia
           and Falai Chen
           <br> 
-          <i>ACM Transactions on Graphics, Vol. 44, 2025.</i>
+          <i>ACM Transactions on Graphics, Vol. 44(2), article 18, 2025.</i>
           <br> 
         </td>
       </tr>
