--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ My research interest includes computer aided geometric design, computer aided de
             <img width="180" src="./Homepage_files/fig/TOG2025.png" alt="">
           <!-- </div> -->
         </td>
-        <td style="text-align: left; vertical-align: middle;"> 
+        <td class="text-align: left; vertical-align: middle;">  
             <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>   
           <br>
           <strong>Kai Li</strong>,
@@ -106,7 +106,7 @@ My research interest includes computer aided geometric design, computer aided de
           and Falai Chen
           <br> 
           <i>ACM Transactions on Graphics, Vol. 44(2), article 18, 2025.</i>
-          <br> 
+          <br>  
         </td>
       </tr>
     </tbody>
