--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@ My research interest includes computer aided geometric design, computer aided de
   <table border="0" width="100%">
     <tbody> 
       <tr>
-        <td>
+        <td style="vertical-align: middle;">
           <!-- <div align="center"> -->
             <img width="180" src="./Homepage_files/fig/TOG2025.png" alt="">
           <!-- </div> -->
         </td>
-        <td class="text-align: left; vertical-align: middle;">  
+        <td style="text-align: left; vertical-align: middle;">  
             <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>   
           <br>
           <strong>Kai Li</strong>,
