--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="./Homepage_files/sty/jemdoc.css" type="text/css">
 <style type="text/css">
+        table {
+            width: 100%;
+            table-layout: fixed; /* 固定表格布局 */
+            margin-bottom: 20px; /* 每个表格之间的间距 */
+        }
+        td {
+            padding: 10px;
+            vertical-align: top; /* 使内容从单元格的顶部开始 */
+        }
+        .image-cell {
+            text-align: center; /* 图片居中 */
+        }
+        .text-cell {
+            text-align: left; /* 文字左对齐 */
+        }
+        .image-cell img {
+            max-width: 180px; /* 图片最大宽度 */
+            height: auto;
+            display: block; /* 确保图片是块级元素 */
+            margin: 0 auto; /* 图片居中 */
+        }
 </style>
   <title>Kai Li's Homepage</title>
 <link rel="shortcut icon" href="./Homepage_files/fig/profile_image.jpg" >
@@ -93,12 +114,12 @@ My research interest includes computer aided geometric design, computer aided de
   <table border="0" width="100%">
     <tbody> 
       <tr>
-        <td style="vertical-align: middle;">
+        <td class="image-cell">
           <!-- <div align="center"> -->
             <img width="180" src="./Homepage_files/fig/TOG2025.png" alt="">
           <!-- </div> -->
         </td>
-        <td style="text-align: left; vertical-align: middle;">  
+        <td class="text-cell">  
             <a href=" https://dl.acm.org/doi/10.1145/3727620" target="_blank">Fast Determination and Computation of Self-intersections for NURBS Surfaces</a>   
           <br>
           <strong>Kai Li</strong>,
