--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             text-align: center; /* 图片居中 */
         }
         .text-cell {
+            width: 75%;
             text-align: left; /* 文字左对齐 */
         }
         .image-cell img {
+            width: 25%;
             max-width: 180px; /* 图片最大宽度 */
             height: auto;
             display: block; /* 确保图片是块级元素 */
