--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
         .image-cell {
             text-align: center; /* 图片居中 */
         }
-        .text-cell {
+        .text-cell { 
             width: 75%;
             text-align: left; /* 文字左对齐 */
         }
         .image-cell img {
-            width: 25%;
             max-width: 180px; /* 图片最大宽度 */
             height: auto;
             display: block; /* 确保图片是块级元素 */
@@ -141,11 +140,11 @@ My research interest includes computer aided geometric design, computer aided de
     <tbody> 
       <tr>
         <td>
-          <div align="center">
+          <div class="image-cell">
             <img width="180" src="./Homepage_files/fig/CAGD2023.png" alt="">
           </div>
         </td>
-        <td>
+        <td class="text-cell">
           <a href=" https://authors.elsevier.com/c/1hyKgcAOr6xCP" target="_blank">Efficient Computation of Moving Planes for Rational Parametric Surfaces with Base Points Using Dixon Resultants</a>        
           <br>
           <strong>Kai Li</strong>,
@@ -165,11 +164,11 @@ My research interest includes computer aided geometric design, computer aided de
     <tbody> 
       <tr>
         <td>
-          <div align="center">
+          <div class="image-cell">
             <img width="180" src="./Homepage_files/fig/UtahTeapot.png" alt="">
           </div>
         </td>
-        <td>
+        <td class="text-cell">
           <a href=" https://www.sciencedirect.com/science/article/abs/pii/S0010448522000732" target="_blank">Computing the Intersection of Two Rational Surfaces Using Matrix Representations</a>        
           <br>
           Xiaohong Jia, 
