--- a/index.html
+++ b/index.html
@@ -112,7 +112,29 @@ My research interest includes computer aided geometric design, computer aided de
     </tbody>
   </table>  
 
-
+  <table border="0" width="100%">
+    <tbody> 
+      <tr>
+        <td>
+          <div align="center">
+            <img width="220" src="./Homepage_files/fig/CAGD2025.png" alt="">
+          </div>
+        </td>
+        <td style="width: 70%; text-align: left;">
+          <a href=" https://authors.elsevier.com/c/1hyKgcAOr6xCP" target="_blank"> Computing the Intersection of Two Ellipsoids Based on a Fast Algebraic Topology Determination Strategy</a>        
+          <br>
+          Xiao Chu,
+          <strong>Kai Li</strong>,
+          Xiaohong Jia,
+          Jieyin Yang
+          and Jiarui Kang
+          <br> 
+          <i>Computer Aided Geometric Design, Vol. 119, 2025.</i>
+          <br>
+        </td>
+      </tr>
+    </tbody>
+  </table>
   
   <table border="0" width="100%">
     <tbody> 
