--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ My research interest includes computer aided geometric design, computer aided de
           </div>
         </td>
         <td style="width: 70%; text-align: left;">
-          <a href=" https://authors.elsevier.com/c/1l2IXcAOrEZLz" target="_blank"> Computing the Intersection of Two Ellipsoids Based on a Fast Algebraic Topology Determination Strategy</a>        
+          <a href=" https://doi.org/10.1016/j.cagd.2025.102442" target="_blank"> Computing the Intersection of Two Ellipsoids Based on a Fast Algebraic Topology Determination Strategy</a>        
           <br>
           Xiao Chu,
           <strong>Kai Li</strong>,
@@ -145,7 +145,7 @@ My research interest includes computer aided geometric design, computer aided de
           </div>
         </td>
         <td style="width: 70%; text-align: left;">
-          <a href=" https://authors.elsevier.com/c/1hyKgcAOr6xCP" target="_blank">Efficient Computation of Moving Planes for Rational Parametric Surfaces with Base Points Using Dixon Resultants</a>        
+          <a href=" https://doi.org/10.1016/j.cagd.2023.102253" target="_blank">Efficient Computation of Moving Planes for Rational Parametric Surfaces with Base Points Using Dixon Resultants</a>        
           <br>
           <strong>Kai Li</strong>,
           Xiaohong Jia
