--- a/index.html
+++ b/index.html
@@ -182,7 +182,18 @@ My research interest includes computer aided geometric design, computer aided de
     </tbody>
   </table>  
 
-   
+
+  <h2>Awards</h2> 
+   <!--<table id="tbExperiences" border="0" width="100%">
+    <tbody>
+      <tr>
+        <td> 2024  Pacemaker to Merit Student of CAS (中科院三好学生标兵) </td>    
+      </tr>
+      <tr>
+        <td> 2023  Presidential Scholarship of AMSS, AMS (中国科学院数学院院长奖学金) </td>   
+      </tr> 
+    </tbody>
+  </table> -->
   
 <!--
   <h2>Research Experiences</h2>
