--- a/index.html
+++ b/index.html
@@ -185,9 +185,11 @@ My research interest includes computer aided geometric design, computer aided de
 
 <h2>Awards</h2> 
     <tbody>
-      <tr>
-        <td> 2024  Pacemaker to Merit Student of CAS (中科院三好学生标兵) </td>    
-      </tr>
+      <ul>
+         <li> 2024  Pacemaker to Merit Student of CAS (中科院三好学生标兵) </li>
+      </ul>
+    </tbody>
+    <tbody> 
       <tr>
         <td> 2023  Presidential Scholarship of AMSS, AMS (中国科学院数学院院长奖学金) </td>   
       </tr> 
