--- a/index.html
+++ b/index.html
@@ -185,14 +185,10 @@ My research interest includes computer aided geometric design, computer aided de
 
 <h2>Awards</h2> 
     <tbody>
-      <ul>
-         <li> 2024  Pacemaker to Merit Student of CAS (中科院三好学生标兵) </li>
+      <ul style="list-style-type: disc;">
+         <li>2024  Pacemaker to Merit Student of CAS (中科院三好学生标兵) </li>
+         <li>2023  Presidential Scholarship of AMSS, AMS (中国科学院数学院院长奖学金) </li>
       </ul>
-    </tbody>
-    <tbody> 
-      <tr>
-        <td> 2023  Presidential Scholarship of AMSS, AMS (中国科学院数学院院长奖学金) </td>   
-      </tr> 
     </tbody>
   </table> 
   
