--- a/index.html
+++ b/index.html
@@ -191,6 +191,16 @@ My research interest includes computer aided geometric design, computer aided de
       </ul>
     </tbody>
   </table> 
+
+
+<h2>Fundings</h2> 
+    <tbody>
+      <ul style="list-style-type: disc;">
+         <li>2024  China Postdoctoral Science Foundation  <br>
+         <span style="margin-left: -20px; display: inline-block;"> 中国博士后科学基金面上资助“面向CAD几何内核的曲面求交理论和算法” </li>
+      </ul>
+    </tbody>
+  </table> 
   
 <!--
   <h2>Research Experiences</h2>
