--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ My research interest includes computer aided geometric design, computer aided de
       <tr>
         <td>
           <div align="center">
-            <img width="220" src="./Homepage_files/fig/CAGD2025.png" alt="">
+            <img width="220" src="./Homepage_files/fig/2025CAGD.png" alt="">
           </div>
         </td>
         <td style="width: 70%; text-align: left;">
@@ -195,9 +195,9 @@ My research interest includes computer aided geometric design, computer aided de
 
 <h2>Fundings</h2> 
     <tbody>
-      <ul style="list-style-type: disc;">
-         <li>2024  China Postdoctoral Science Foundation </li>
-           <li class="no-bullet">中国博士后科学基金面上资助“面向CAD几何内核的曲面求交理论和算法”</li> 
+      <ul style="list-style-type: disc; padding-left: 20px;">
+         <li>2024  China Postdoctoral Science Foundation <br>
+      <span style="margin-left: -20px;">中国博士后科学基金面上资助“面向CAD几何内核的曲面求交理论和算法”</li> 
       </ul>
     </tbody>
   </table> 
