--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@ My research interest includes computer aided geometric design, computer aided de
 <h2>Fundings</h2> 
     <tbody>
       <ul style="list-style-type: disc; padding-left: 20px;">
-         <li>2024  China Postdoctoral Science Foundation <br>
-      <span style="margin-left: 10px;">中国博士后科学基金面上资助“面向CAD几何内核的曲面求交理论和算法”</li> 
+         <li>2024.11 - 2026.06  China Postdoctoral Science Foundation <br>
+      <span style="margin-left: 5px;">中国博士后科学基金面上资助“面向CAD几何内核的曲面求交理论和算法”</li> 
       </ul>
     </tbody>
   </table> 
