--- a/index.html
+++ b/index.html
@@ -89,6 +89,22 @@ I am currently a postdoctoral researcher in
 My research interest includes computer aided geometric design, computer aided design and computer graphics.
 </p>
 
+<h2>Awards</h2> 
+    <tbody>
+      <ul style="list-style-type: disc;">
+         <li> 09/2019- 06/2024. Ph.D. in Mathematics, 
+           <tr>
+             <td><a href="http://www.amss.ac.cn/" target="_blank">Academy of Mathematics and Systems Science (AMSS), Chinese Academy of Sciences (CAS) </a> </td>, 
+           <tr> with 
+         <tr>
+            <td> <a href="http://mmrc.iss.ac.cn/~xhjia/" target="_blank">Prof. Xiaohong Jia</a></td>.
+         <tr> </li>
+         <li> 09/2015- 06/2019. B.S. in Mathematics, Dalian University of Technology.  </li>
+         <li>  </li>
+      </ul>
+    </tbody>
+</table> 
+  
 <h2>Publications</h2>
   <table border="0" width="100%">
     <tbody> 
