--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ I am currently a postdoctoral researcher in
 My research interest includes computer aided geometric design, computer aided design and computer graphics.
 </p>
 
-<h2>Awards</h2> 
+<h2>Education</h2> 
     <tbody>
       <ul style="list-style-type: disc;">
          <li> 09/2019- 06/2024. Ph.D. in Mathematics, 
