--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@ My research interest includes computer aided geometric design, computer aided de
          <tr>
             <td> <a href="http://mmrc.iss.ac.cn/~xhjia/" target="_blank">Prof. Xiaohong Jia</a></td>.
          <tr> </li>
-         <li> 09/2015- 06/2019. B.S. in Mathematics, Dalian University of Technology.  </li>
-         <li>  </li>
+        
+         <li> 09/2015- 06/2019. B.S. in Mathematics, 
+           <tr>
+             <td> <a href="https://www.dlut.edu.cn/" target="_blank">Dalian University of Technology </a></td>
+           <tr> </li> 
       </ul>
     </tbody>
 </table> 
