--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ I am currently a postdoctoral researcher in
 My research interest includes computer aided geometric design, computer aided design and computer graphics.
 </p>
 
+<!--
 <h2>Education</h2> 
     <tbody>
       <ul style="list-style-type: disc;">
@@ -102,11 +103,12 @@ My research interest includes computer aided geometric design, computer aided de
         
          <li> 09/2015- 06/2019. B.S. in Mathematics, 
            <tr>
-             <td> <a href="https://www.dlut.edu.cn/" target="_blank">Dalian University of Technology </a></td>
+             <td> <a href="https://www.dlut.edu.cn/" target="_blank">Dalian University of Technology </a></td>.
            <tr> </li> 
       </ul>
     </tbody>
 </table> 
+  -->
   
 <h2>Publications</h2>
   <table border="0" width="100%">
