--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@ My research interest includes computer aided geometric design, computer aided de
       <ul style="list-style-type: disc; padding-left: 20px;">
          <li>2024.11 - 2026.06  China Postdoctoral Science Foundation <br>
       <span style="margin-left: 0.8px;">中国博士后科学基金面上资助“面向CAD几何内核的曲面求交理论和算法”</li> 
+        <li>2025.07 - 2026.06  Postdoctoral Fellowship Program of CPSF <br>
+      <span style="margin-left: 0.8px;">国家资助博士后研究人员计划“面向先进制造的高质量曲面生成方法”</li> 
       </ul>
     </tbody>
   </table> 
