--- a/index.html
+++ b/index.html
@@ -116,6 +116,29 @@ My research interest includes computer aided geometric design, computer aided de
       <tr>
         <td>
           <div align="center"> 
+            <img width="220" src="./Homepage_files/fig/CAD2026-survey.png" alt="">
+          </div>
+        </td>
+        <td style="width: 70%; text-align: left;">  
+            <a href=" https://doi.org/10.1016/j.cad.2026.104039" target="_blank">Advances and Challenges in Surface Intersection Computation - An Overview</a>   
+          <br>
+          <strong>Kai Li</strong>,
+          Jieyin Yang
+          and Xiaohong Jia
+          <br> 
+          <i>Computer-Aided Design, Vol. 193, 2026.</i>
+          <br>  
+        </td>
+      </tr>
+    </tbody>
+  </table>  
+
+  
+  <table border="0" width="100%">
+    <tbody> 
+      <tr>
+        <td>
+          <div align="center"> 
             <img width="220" src="./Homepage_files/fig/TOG2025.png" alt="">
           </div>
         </td>
@@ -196,7 +219,7 @@ My research interest includes computer aided geometric design, computer aided de
           <strong>Kai Li</strong> 
           and Jinsan Cheng
           <br> 
-          <i>Computer Aided Design (Special Issue of ACM Symposium on Solid and Physical Modeling), Vol. 150, 2022.</i>
+          <i>Computer-Aided Design (Special Issue of ACM Symposium on Solid and Physical Modeling), Vol. 150, 2022.</i>
           <br>
         </td>
       </tr>
